# aitf-keyword-scraper

./: .env.example  .gitignore  CLAUDE.md  HISTORY.md  README.md  SPEC.md  Scrape_Keywords.py  config.py  database.py  docker-compose.yml  keyword_scraper.db  main.py  pyproject.toml  scraped_item.schema.json  taxonomy-kpm.json  test_llm_enricher_smoke.py  test_scrapers.py
alembic/: env.py
alembic/versions/: 3dac2b7d80bb_initial_schema.py  remove_llm_justified_status.py
api/: main.py
api/routes/: classify.py  expand.py  filter.py  keywords.py  scrape.py
docs/: architecture_diagrams.md
google-trends/: crawl.py  pyproject.toml
keyword_scraper/: __init__.py  classifier.py  config.py  filters.py  runner.py  schema.py  scrapers.py
models/: keyword.py
notebooks/: synthetic_sft_generator.ipynb
pages/: 1_Scrape.py  2_Rule_Filter.py  2a_Rule_Filter.py  2b_AI_Filter.py  3_AI_Filter.py  3_Fresh_Keywords.py  4_Expand.py  4_Fresh_Keywords.py  5_Expand.py  streamlit_app.py
scripts/: export_sft_data.py
services/: expander.py  openrouter.py
services/api/: Dockerfile  auth.py  main.py  models.py  routes.py  schemas.py
services/demo/: Dockerfile  app.py  requirements.txt
services/expiry/: Dockerfile  (+1 more)
shared/: pyproject.toml
tests/: conftest.py  test_api.py  test_delta.py  test_demo_dashboard.py  test_expander.py  test_expiry.py  test_filters.py  test_integration.py  test_llm_enricher.py  test_llm_justifier.py  test_llm_processor.py  test_models.py  test_openrouter.py  test_sampler.py  test_scraper.py  test_summarizer.py
trends24/: main.py  pyproject.toml
(+45 files in other folders)
