[project]
name = "keyword-scraper"
version = "0.1.0"
description = "Unified trending keyword scraper — Google Trends + Trends24, with taxonomy classification."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crawl4ai>=0.4.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas>=2.0",
    "transformers>=4.40",
    "torch>=2.2",
    "nest-asyncio>=1.6.0",
]

[project.scripts]
scrape = "main:main"
