[project]
name = "google-trends-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.8.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
]
